--- a/.gitignore
+++ b/.gitignore
@@ -148,4 +148,4 @@ fabric.properties
 .history
 .ionide
 
-# End of https://www.toptal.com/developers/gitignore/api/visualstudiocode,git,phpstorm
+connect.php
